navbar and floater, v2

--- a/index.html
+++ b/index.html
@@ -212,14 +212,11 @@
 <body>
     <!-- START: Navigation -->
     <nav class="bg-black shadow fixed w-full z-50  fade-in">
-        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+        <div class="flex justify-center mx-auto px-4 py-3 flex items-center">
             <a href="/" class="flex items-center">
-                <img src="./Trade Talks Logo white.png" alt="Trade Talks" class="h-10 w-auto">
+                <img src="./Trade Talks Logo white.png" alt="Trade Talks" class="h-12 w-auto">
             </a>
-            <a href="/#contact"
-                class="bg-green-600 hidden md:flex hover:bg-green-700 text-white font-bold px-6 py-2 rounded-full transition-colors">
-                Join Now
-            </a>
+         
         </div>
     </nav>
     <!-- END: Navigation -->
@@ -1921,7 +1918,7 @@
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     <!-- END: Map Section -->
     <!-- START: Footer -->
-    <footer class="bg-black border-t border-gray-100">
+    <footer class="bg-black border-t border-gray-100 mb-16">
         <div class="container mx-auto max-w-6xl px-4">
             <!-- Main Footer Content -->
             <div class="py-12 grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -2016,11 +2013,10 @@
     <!-- END: Footer -->
     <!-- START: Floating Contact Buttons -->
 
-
-    <a href="https://wa.me/+919072722294" class=" fixed bottom-0 px-5 py-3 group w-full bg-black ">
+    <a href="https://wa.me/+919072722294" class=" flex fixed justify-center bottom-0 right-0 left-0 px-5 py-3 group w-full  bg-black  ">
 
         <div
-            class="bg-green-600 text-white p-3 rounded-full shadow-lg px-5 hover:bg-green-400 flex items-center justify-center">
+            class="bg-green-600 text-white p-3 md:w-1/4 w-full rounded-full shadow-lg px-5 hover:bg-green-400 flex items-center justify-center">
             Join Now
         </div>
     </a>
