whatsapp message im interested

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 <body>
     <!-- START: Navigation -->
-    <nav class="bg-black shadow fixed w-full z-50  fade-in">
+    <nav class="bg-black shadow md:fixed w-full z-50  fade-in">
         <div class="flex justify-center mx-auto px-4 py-3 flex items-center">
             <a href="/" class="flex items-center">
                 <img src="./Trade Talks Logo white.png" alt="Trade Talks" class="h-12 w-auto">
@@ -2013,7 +2013,7 @@
     <!-- END: Footer -->
     <!-- START: Floating Contact Buttons -->
 
-    <a href="https://wa.me/+919072722294" class=" flex fixed justify-center bottom-0 right-0 left-0 px-5 py-3 group w-full  bg-black  ">
+    <a href="https://wa.me/+919072722294?text=I%20want%20to%20know%20more%20about%20share%20trading" class=" flex fixed justify-center bottom-0 right-0 left-0 px-5 py-3 group w-full  bg-black  ">
 
         <div
             class="bg-green-600 text-white p-3 md:w-1/4 w-full rounded-full shadow-lg px-5 hover:bg-green-400 flex items-center justify-center">
