--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         .hero-bg {
-            background: url('./whitecand.jpg') center/cover;
+            background: url('./bgcandle.jpg') center/cover;
         }
 
         .candlestick-pattern {
